err/chaos.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/chaos'...
Listing './lib/python3.5/site-packages/chaos/amqp'...
Compiling './lib/python3.5/site-packages/chaos/amqp/queue.py'...
***   File "./lib/python3.5/site-packages/chaos/amqp/queue.py", line 110
    except Exception, eee:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chaos/config.py'...
***   File "./lib/python3.5/site-packages/chaos/config.py", line 135
    except ConfigObjError, coe:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chaos/multiprocessing'...
Listing './lib/python3.5/site-packages/chaos/threading'...
Listing './lib/python3.5/site-packages/chaos-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Listing './lib/python3.5/site-packages/pika-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
